[package]
name = "vec2checkd"
version = "0.1.0"
edition = "2021"

[dependencies]
yaml-rust = "0.4"
prometheus-http-query = "0.3.3"
log = "0.4"
env_logger = "0.9"
anyhow = "1"
nagios-range = "0.2"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde = "1.0"
serde_json = "1.0"
base64 = "0.13"
gumdrop = "0.8"
url = "2.2"