[package]
name = "vec2checkd"
version = "0.2.0"
authors = ["Peter Sebastian Puetz <peter.puetz@itenos.de>"]
edition = "2021"
keywords = [ "icinga", "prometheus", "api", "promql", "nagios" ]
description = "Execute PromQL queries and send results as passive check results to Icinga2"
readme = "README.md"
license = "MIT"
repository = "https://github.com/puetzp/vec2checkd"

[dependencies]
yaml-rust = "0.4"
prometheus-http-query = "0.4"
log = "0.4"
env_logger = "0.9"
anyhow = "1"
nagios-range = "0.2.5"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde = "1.0"
serde_json = "1.0"
base64 = "0.13"
gumdrop = "0.8"
url = "2.2"
md-5 = "0.10"
handlebars  = "4.2"

[package.metadata.deb]
extended-description = "vec2checkd executes PromQL queries against the Prometheus HTTP API regularly and evaluates and translates the results to passive check results to be sent to the Icinga2 HTTP API"
license-file = [ "LICENSE", "0" ]
section = "utility"
priority = "optional"
maintainer-scripts = "debian/"
systemd-units = { unit-name = "vec2checkd" }
assets = [
       ["target/release/vec2checkd", "/usr/bin/vec2checkd", "755"],
       ["defaults/template.yaml", "/etc/vec2checkd/template.yaml", "644"],
]
depends = "$auto"
